website fertig soweit

--- a/index.html
+++ b/index.html
@@ -1,15 +1,376 @@
 ﻿<!doctype html>
-<html lang="de">
+<html lang="de" data-theme="light">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Murr Medien — Website in Progress</title>
+    <title>Murr Medien — Website in Arbeit</title>
+    <meta name="description"
+          content="Unser neuer Webauftritt ist in Arbeit. Kontakt: info@murrmedien.de" />
+
+    <style>
+          /* =========================
+           FONTS
+           Voraussetzungen:
+           - ./fonts/Jost-Regular.ttf
+           - ./assets/Jost-BoldItalic.ttf
+           - ./assets/logo.png
+        ========================== */
+          @font-face {
+              font-family: "Jost";
+              src: url("./fonts/Jost-Regular.ttf") format("truetype");
+              font-weight: 400;
+              font-style: normal;
+              font-display: swap;
+          }
+
+          @font-face {
+              font-family: "Jost Display";
+              src: url("./assets/Jost-BoldItalic.ttf") format("truetype");
+              font-weight: 700;
+              font-style: italic;
+              font-display: swap;
+          }
+
+          /* =========================
+           THEME TOKENS
+        ========================== */
+          :root {
+              --bg: #f5f5f7;
+              --text: rgba(0, 0, 0, 0.88);
+              --muted: rgba(0, 0, 0, 0.58);
+              --hairline: rgba(0, 0, 0, 0.12);
+              --radius: 16px;
+              /* ambient gradients (apple-like) */
+              --g1: rgba(0, 113, 227, 0.18);
+              --g2: rgba(88, 86, 214, 0.18);
+              --g3: rgba(52, 199, 89, 0.14);
+              /* accent for hover/active */
+              --accent: rgba(0, 113, 227, 1);
+              /* toggle glass */
+              --toggle-glass: rgba(255, 255, 255, 0.65);
+              --toggle-stroke: rgba(0, 0, 0, 0.12);
+              --toggle-shadow: 0 18px 50px rgba(0, 0, 0, 0.16);
+              --switch-track: rgba(0, 0, 0, 0.18);
+              --switch-knob: #ffffff;
+          }
+
+          [data-theme="dark"] {
+              --bg: #0b0c0f;
+              --text: rgba(255, 255, 255, 0.92);
+              --muted: rgba(255, 255, 255, 0.65);
+              --hairline: rgba(255, 255, 255, 0.14);
+              --g1: rgba(0, 113, 227, 0.28);
+              --g2: rgba(88, 86, 214, 0.26);
+              --g3: rgba(52, 199, 89, 0.22);
+              --toggle-glass: rgba(255, 255, 255, 0.08);
+              --toggle-stroke: rgba(255, 255, 255, 0.14);
+              --toggle-shadow: 0 22px 60px rgba(0, 0, 0, 0.55);
+              --switch-track: rgba(255, 255, 255, 0.22);
+              --switch-knob: rgba(255, 255, 255, 0.95);
+          }
+
+          /* =========================
+           BASE
+        ========================== */
+          * {
+              box-sizing: border-box;
+          }
+
+          html,
+          body {
+              height: 100%;
+          }
+
+          body {
+              margin: 0;
+              font-family: "Jost", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+              color: var(--text);
+              /* Apple-like ambient background */
+              background: radial-gradient(900px 520px at 15% 12%, var(--g1), transparent 60%), radial-gradient(820px 640px at 85% 16%, var(--g2), transparent 65%), radial-gradient(720px 640px at 50% 90%, var(--g3), transparent 65%), var(--bg);
+          }
+
+          /* =========================
+           LAYOUT
+        ========================== */
+          .page {
+              min-height: 100%;
+              display: grid;
+              grid-template-rows: auto 1fr auto;
+          }
+
+          .header {
+              padding: 24px 28px;
+              display: flex;
+              align-items: center;
+              justify-content: flex-start;
+          }
+
+          .logo {
+              height: 36px;
+              width: auto;
+              display: block;
+          }
+
+          @media (min-width: 900px) {
+              .header {
+                  padding: 28px 48px;
+              }
+
+              .logo {
+                  height: 42px;
+              }
+          }
+
+          .main {
+              display: grid;
+              place-items: center;
+              padding: 24px;
+          }
+
+          .center {
+              text-align: center;
+              width: min(720px, 100%);
+          }
+
+          .title {
+              margin: 0 0 10px;
+              font-family: "Jost Display", "Jost", system-ui, sans-serif;
+              font-size: clamp(36px, 5vw, 56px);
+              line-height: 1.04;
+              letter-spacing: -0.015em;
+          }
+
+          .subtitle {
+              margin: 0 0 24px;
+              font-size: 16px;
+              line-height: 1.6;
+              color: var(--muted);
+          }
+
+          /* =========================
+           CTA BUTTON (glass -> accent on hover)
+        ========================== */
+          .cta {
+              display: inline-flex;
+              align-items: center;
+              justify-content: center;
+              padding: 12px 18px;
+              border-radius: 999px;
+              background: rgba(255, 255, 255, 0.6);
+              color: var(--text);
+              border: 1px solid var(--hairline);
+              backdrop-filter: blur(12px);
+              -webkit-backdrop-filter: blur(12px);
+              font-size: 14px;
+              letter-spacing: 0.01em;
+              text-decoration: none;
+              user-select: none;
+              transition: background 0.2s ease, color 0.2s ease, transform 0.15s ease, box-shadow 0.2s ease, border-color 0.2s ease;
+          }
+
+          [data-theme="dark"] .cta {
+              background: rgba(255, 255, 255, 0.08);
+              color: var(--text);
+              border-color: rgba(255, 255, 255, 0.14);
+          }
+
+          .cta:hover,
+          .cta:focus-visible {
+              background: linear-gradient(180deg, rgba(0, 113, 227, 0.95), rgba(0, 113, 227, 0.75));
+              color: #ffffff;
+              border-color: rgba(0, 113, 227, 0.4);
+              box-shadow: 0 12px 34px rgba(0, 113, 227, 0.35);
+              transform: translateY(-1px);
+          }
+
+          .cta:active {
+              transform: translateY(0px);
+              box-shadow: 0 8px 22px rgba(0, 113, 227, 0.35);
+          }
+
+          .cta:focus-visible {
+              outline: 3px solid rgba(0, 113, 227, 0.45);
+              outline-offset: 3px;
+          }
+
+          /* =========================
+           FOOTER (clean legal)
+        ========================== */
+          .footer {
+              border-top: 1px solid var(--hairline);
+              padding: 18px 18px 22px;
+              font-size: 12.5px;
+              line-height: 1.55;
+              color: var(--muted);
+          }
+
+          .footer-inner {
+              max-width: 920px;
+              margin: 0 auto;
+              display: flex;
+              flex-direction: column;
+              gap: 6px;
+          }
+
+          .footer a {
+              color: var(--text);
+              text-decoration: none;
+          }
+
+              .footer a:hover {
+                  text-decoration: underline;
+              }
+
+          /* =========================
+           GLASS TOGGLE (bottom-right)
+           Apple-like switch
+        ========================== */
+          .toggle-wrap {
+              position: fixed;
+              right: 18px;
+              bottom: 18px;
+              z-index: 50;
+              display: inline-flex;
+              align-items: center;
+              gap: 12px;
+              padding: 10px 12px;
+              border-radius: 999px;
+              background: var(--toggle-glass);
+              border: 1px solid var(--toggle-stroke);
+              box-shadow: var(--toggle-shadow);
+              backdrop-filter: blur(14px);
+              -webkit-backdrop-filter: blur(14px);
+          }
+
+          .toggle-label {
+              font-size: 12.5px;
+              color: var(--muted);
+              user-select: none;
+              min-width: 42px;
+              text-align: right;
+          }
+
+          .switch {
+              position: relative;
+              width: 46px;
+              height: 28px;
+              border-radius: 999px;
+              background: var(--switch-track);
+              border: 1px solid var(--toggle-stroke);
+              cursor: pointer;
+              transition: background 0.2s ease, border-color 0.2s ease;
+              outline: none;
+          }
+
+              .switch::after {
+                  content: "";
+                  position: absolute;
+                  top: 3px;
+                  left: 3px;
+                  width: 22px;
+                  height: 22px;
+                  border-radius: 999px;
+                  background: var(--switch-knob);
+                  box-shadow: 0 8px 18px rgba(0, 0, 0, 0.18);
+                  transition: transform 0.22s ease;
+              }
+
+              .switch[data-on="true"] {
+                  background: rgba(52, 199, 89, 0.9);
+                  border-color: rgba(52, 199, 89, 0.35);
+              }
+
+                  .switch[data-on="true"]::after {
+                      transform: translateX(18px);
+                  }
+
+              .switch:focus-visible {
+                  outline: 3px solid rgba(0, 113, 227, 0.45);
+                  outline-offset: 3px;
+              }
+
+          @media (prefers-reduced-motion: reduce) {
+              * {
+                  transition: none !important;
+              }
+          }
+    </style>
 </head>
-<body style="display:grid;place-items:center;min-height:100vh;font-family:system-ui">
-    <div>
-        <h1>Website in Progress</h1>
-        <p>Wir arbeiten gerade an unserem neuen Auftritt.</p>
-        <p>Kontakt: hello@murr-medien.de</p>
+
+<body>
+    <div class="page">
+        <header class="header">
+            <img src="./assets/logo.png" alt="Murr Medien" class="logo" />
+        </header>
+
+        <main class="main">
+            <div class="center">
+                <h1 class="title">Bald fertig...</h1>
+                <p class="subtitle">
+                    Wir arbeiten gerade an unserem neuen Auftritt. Bis dahin erreicht ihr uns jederzeit per E-Mail.
+                </p>
+                <a class="cta" href="mailto:info@murrmedien.de">schreibe uns! :)</a>
+            </div>
+        </main>
+
+        <footer class="footer">
+            <div class="footer-inner">
+                <div><strong>Murr Medien GbR</strong></div>
+                <div>Amselweg 5, 71570 Oppenweiler</div>
+                <div><a href="mailto:info@murrmedien.de">info@murrmedien.de</a></div>
+                <div>Gesellschafter: Luca Krämer, Moritz Stoppel</div>
+            </div>
+        </footer>
     </div>
+
+    <!-- Apple-like glass switch -->
+    <div class="toggle-wrap" aria-label="Design umschalten">
+        <div class="toggle-label" id="modeLabel">Light</div>
+        <div class="switch"
+             id="themeSwitch"
+             role="switch"
+             tabindex="0"
+             aria-checked="false"
+             data-on="false"
+             title="Light/Dark umschalten"></div>
+    </div>
+
+    <script>const root = document.documentElement;
+        const sw = document.getElementById("themeSwitch");
+        const label = document.getElementById("modeLabel");
+
+        function apply(theme) {
+            root.setAttribute("data-theme", theme);
+            localStorage.setItem("theme", theme);
+
+            const isDark = theme === "dark";
+            sw.dataset.on = String(isDark);
+            sw.setAttribute("aria-checked", String(isDark));
+            label.textContent = isDark ? "Dark" : "Light";
+        }
+
+        // initial theme: saved -> else system
+        const saved = localStorage.getItem("theme");
+        if (saved === "light" || saved === "dark") {
+            apply(saved);
+        } else {
+            const prefersDark =
+                window.matchMedia &&
+                window.matchMedia("(prefers-color-scheme: dark)").matches;
+            apply(prefersDark ? "dark" : "light");
+        }
+
+        function toggleTheme() {
+            const current = root.getAttribute("data-theme") || "light";
+            apply(current === "dark" ? "light" : "dark");
+        }
+
+        sw.addEventListener("click", toggleTheme);
+        sw.addEventListener("keydown", (e) => {
+            if (e.key === "Enter" || e.key === " ") {
+                e.preventDefault();
+                toggleTheme();
+            }
+        });</script>
 </body>
 </html>
