--- a/index.html
+++ b/index.html
@@ -271,6 +271,12 @@
                     transition: transform 0.22s ease;
                 }
 
+        [data-theme="dark"] footer a:hover {
+            color: #ffffff;
+            text-decoration: underline;
+        }
+
+
                 /* ON = dark theme active (neutral gray, Apple-like) */
                 .theme-switch[data-on="true"] {
                     background: rgba(255, 255, 255, 0.28);
@@ -340,8 +346,8 @@
 
         <footer>
             Murr Medien GbR · Amselweg 5 · 71570 Oppenweiler ·
-            <a href="mailto:info@murrmedien.de">info@murrmedien.de</a><br />
-            Gesellschafter: Luca Krämer &amp; Moritz Stoppel
+            info@murrmedien.de<br />
+            Gesellschafter: Luca Krämer, Moritz Stoppel
         </footer>
     </div>
 
