--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             }
 
             .hero-avatar.right {
-                margin-left: -20px;
+                margin-left: -10px;
             }
 
             /* =========================
@@ -346,7 +346,7 @@
 
         <footer>
             Murr Medien GbR · Amselweg 5 · 71570 Oppenweiler ·
-            info@murrmedien.de<br />
+            <a href="mailto:info@murrmedien.de">info@murrmedien.de</a><br />
             Gesellschafter: Luca Krämer, Moritz Stoppel
         </footer>
     </div>
