--- a/index.html
+++ b/index.html
@@ -236,6 +236,15 @@
             user-select: none;
         }
 
+        @media (max-width: 640px) {
+            .theme-toggle {
+                top: 14px;
+                bottom: auto;
+                right: 14px;
+            }
+        }
+
+
         .theme-icon {
             width: 18px;
             height: 18px;
