--- a/projekte.html
+++ b/projekte.html
@@ -70,51 +70,48 @@
 
         /* HEADER */
         header {
-            padding: 24px 28px;
-            display: flex;
+            padding: 20px 28px;
+            display: grid;
+            grid-template-columns: 1fr auto 1fr;
             align-items: center;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            gap: 16px;
-            position: relative;
         }
 
         .logo { height: 40px; }
+        .logo-link { display: flex; justify-content: center; }
 
-        nav {
+        .header-left {
             display: flex;
-            gap: 6px;
-            flex-wrap: wrap;
+            align-items: center;
+            gap: 10px;
         }
 
-        nav a {
-            display: inline-flex;
-            padding: 7px 14px;
-            border-radius: 999px;
-            background: var(--glass);
-            border: 1px solid var(--glass-border);
-            backdrop-filter: blur(14px);
-            color: var(--text);
+        .header-right {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            position: relative;
+        }
+
+        .social-link {
+            display: grid;
+            place-items: center;
+            width: 36px;
+            height: 36px;
+            color: var(--muted);
             text-decoration: none;
-            font-size: 14px;
-            transition: all 0.2s ease;
+            transition: color 0.2s ease;
         }
 
-        nav a:hover, nav a.active {
-            background: var(--apple-blue);
-            color: #fff;
-            border-color: transparent;
-            box-shadow: 0 8px 24px rgba(0,113,227,0.28);
-        }
+        .social-link:hover { color: var(--text); }
 
         .hamburger {
-            display: none;
+            display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            gap: 5px;
-            width: 38px;
-            height: 38px;
+            gap: 6px;
+            width: 44px;
+            height: 44px;
             border-radius: 999px;
             background: var(--glass);
             border: 1px solid var(--glass-border);
@@ -124,7 +121,7 @@
 
         .hamburger span {
             display: block;
-            width: 16px;
+            width: 18px;
             height: 1.5px;
             background: var(--text);
             border-radius: 999px;
@@ -132,32 +129,70 @@
             transform-origin: center;
         }
 
-        .hamburger.open span:nth-child(1) { transform: translateY(6.5px) rotate(45deg); }
+        .hamburger.open span:nth-child(1) { transform: translateY(7.5px) rotate(45deg); }
         .hamburger.open span:nth-child(2) { opacity: 0; }
-        .hamburger.open span:nth-child(3) { transform: translateY(-6.5px) rotate(-45deg); }
+        .hamburger.open span:nth-child(3) { transform: translateY(-7.5px) rotate(-45deg); }
 
-        @media (max-width: 640px) {
-            .hamburger { display: flex; }
-
-            nav {
-                display: none;
-                position: absolute;
-                top: 100%;
-                left: 0;
-                right: 0;
-                flex-direction: column;
-                padding: 12px 18px 18px;
-                gap: 8px;
-                background: color-mix(in srgb, var(--bg) 88%, transparent);
-                backdrop-filter: blur(20px);
-                border-bottom: 1px solid var(--hairline);
-                z-index: 100;
-            }
-
-            nav.open { display: flex; }
-
-            nav a { border-radius: 12px; }
+        nav {
+            display: none;
+            position: absolute;
+            top: calc(100% + 10px);
+            right: 0;
+            min-width: 180px;
+            flex-direction: column;
+            background: color-mix(in srgb, var(--bg) 94%, transparent);
+            backdrop-filter: blur(24px);
+            border: 1px solid var(--hairline);
+            border-radius: 16px;
+            overflow: hidden;
+            z-index: 100;
         }
+
+        nav.open { display: flex; }
+
+        nav a {
+            display: block;
+            padding: 13px 22px;
+            font-size: 16px;
+            color: var(--text);
+            text-decoration: none;
+            transition: color 0.15s ease;
+        }
+
+        nav a + a { border-top: 1px solid var(--hairline); }
+
+        nav a:hover,
+        nav a.active { color: var(--apple-blue); }
+
+        /* FOOTER */
+        footer {
+            border-top: 1px solid var(--hairline);
+            padding: 32px 28px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 6px;
+            text-align: center;
+        }
+
+        .footer-logo {
+            height: 28px;
+            margin-bottom: 6px;
+            opacity: 0.55;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 12.5px;
+            color: var(--muted);
+        }
+
+        footer a {
+            color: var(--muted);
+            text-decoration: none;
+        }
+
+        footer a:hover { color: var(--text); }
 
         /* MAIN */
         main {
@@ -427,18 +462,36 @@
 <div class="page">
 
     <header>
-        <a href="./index.html">
+        <div class="header-left">
+            <a href="https://www.instagram.com/murrmedien" target="_blank" rel="noopener" class="social-link" aria-label="Instagram">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="none">
+                    <rect x="3" y="3" width="18" height="18" rx="5" stroke="currentColor" stroke-width="1.7"/>
+                    <circle cx="12" cy="12" r="4" stroke="currentColor" stroke-width="1.7"/>
+                    <circle cx="17.5" cy="6.5" r="1" fill="currentColor"/>
+                </svg>
+            </a>
+            <a href="https://www.linkedin.com/company/murrmedien" target="_blank" rel="noopener" class="social-link" aria-label="LinkedIn">
+                <svg viewBox="0 0 24 24" width="20" height="20" fill="none">
+                    <rect x="2" y="2" width="20" height="20" rx="4" stroke="currentColor" stroke-width="1.7"/>
+                    <path d="M7 10v7M11 10v7M11 13a3 3 0 0 1 6 0v4" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"/>
+                    <circle cx="7" cy="7" r="1" fill="currentColor"/>
+                </svg>
+            </a>
+        </div>
+        <a href="./index.html" class="logo-link">
             <img src="./assets/logo.png" class="logo" alt="Murr Medien">
         </a>
-        <button class="hamburger" id="hamburger" aria-label="Menü öffnen" aria-expanded="false">
-            <span></span><span></span><span></span>
-        </button>
-        <nav id="nav">
-            <a href="./index.html">Start</a>
-            <a href="./ueber-uns.html">Über uns</a>
-            <a href="./projekte.html" class="active">Projekte</a>
-            <a href="./kontakt.html">Kontakt</a>
-        </nav>
+        <div class="header-right">
+            <button class="hamburger" id="hamburger" aria-label="Menü öffnen" aria-expanded="false">
+                <span></span><span></span><span></span>
+            </button>
+            <nav id="nav">
+                <a href="./index.html">Start</a>
+                <a href="./ueber-uns.html">Über uns</a>
+                <a href="./projekte.html" class="active">Projekte</a>
+                <a href="./kontakt.html">Kontakt</a>
+            </nav>
+        </div>
     </header>
 
     <main>
@@ -446,8 +499,7 @@
         <p class="eyebrow">Projekte</p>
         <h1>Was bisher entstand.</h1>
         <p class="lead">
-            Jedes Projekt beginnt mit einem Gespräch. Was ihr hier seht, ist das
-            Ergebnis davon – Auftritte, die zu den Menschen dahinter passen.
+            Ein Blick in unsere Projekte verrät dir mehr über unsere Arbeit und unseren Stil. Entdecke, was wir bisher umgesetzt haben.
         </p>
 
         <!-- HERO PROJECT -->
@@ -481,8 +533,8 @@
                     <div class="hero-tag">Webentwicklung · Gastronomie</div>
                     <div class="hero-title">Vereinsgaststätte Rohrbachtal</div>
                     <div class="hero-desc">
-                        Website für eine Vereinsgaststätte in der Region – mit klarer
-                        Struktur, lokalem Charakter und allen Infos, die Gäste wirklich brauchen.
+                        Für die Vereinsgaststätte Rohrbachtal haben wir eine moderne Website entwickelt. 
+                        Besonderes Augenmerk lag auf der in das CMS integrierten Speisekarte, die es ermöglicht, Änderungen schnell und unkompliziert – auch mobil über das Smartphone – vorzunehmen.
                     </div>
                 </div>
                 <div class="hero-link">
@@ -508,10 +560,11 @@
     </main>
 
     <footer>
-        Murr Medien GbR · Amselweg 5 · 71570 Oppenweiler ·
-        <a href="mailto:info@murrmedien.de">info@murrmedien.de</a> ·
-        Tel.: +49 155 66152739<br>
-        Gesellschafter: Luca Krämer, Moritz Stoppel
+        <img src="./assets/logo.png" class="footer-logo" alt="Murr Medien">
+        <p>Murr Medien GbR · Amselweg 5 · 71570 Oppenweiler</p>
+        <p><a href="mailto:info@murrmedien.de">info@murrmedien.de</a> · Tel.: +49 155 66152739</p>
+        <p>Gesellschafter: Luca Krämer, Moritz Stoppel</p>
+        <p><a href="./impressum.html">Impressum</a> · <a href="./datenschutz.html">Datenschutz</a></p>
     </footer>
 
 </div>
