--- a/impressum.html
+++ b/impressum.html
@@ -222,18 +222,25 @@
         /* FOOTER */
         footer {
             border-top: 1px solid var(--hairline);
-            padding: 32px 28px;
+            padding: 28px 28px;
             display: flex;
-            flex-direction: column;
             align-items: center;
-            gap: 6px;
-            text-align: center;
+            justify-content: space-between;
+            gap: 24px;
         }
 
         .footer-logo {
             height: 28px;
-            margin-bottom: 6px;
             opacity: 0.55;
+            flex-shrink: 0;
+        }
+
+        .footer-right {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            gap: 3px;
+            text-align: right;
         }
 
         footer p {
@@ -346,10 +353,12 @@
 
     <footer>
         <img src="./assets/logo.png" class="footer-logo" alt="Murr Medien">
-        <p>Murr Medien GbR · Amselweg 5 · 71570 Oppenweiler</p>
-        <p><a href="mailto:info@murrmedien.de">info@murrmedien.de</a> · Tel.: +49 155 66152739</p>
-        <p>Gesellschafter: Luca Krämer, Moritz Stoppel</p>
-        <p><a href="./impressum.html">Impressum</a> · <a href="./datenschutz.html">Datenschutz</a></p>
+        <div class="footer-right">
+            <p>Murr Medien GbR · Amselweg 5 · 71570 Oppenweiler</p>
+            <p><a href="mailto:info@murrmedien.de">info@murrmedien.de</a> · Tel.: +49 155 66152739</p>
+            <p>Gesellschafter: Luca Krämer, Moritz Stoppel</p>
+            <p><a href="./impressum.html">Impressum</a> · <a href="./datenschutz.html">Datenschutz</a></p>
+        </div>
     </footer>
 
 </div>
