--- a/kontakt.html
+++ b/kontakt.html
@@ -167,18 +167,25 @@
         /* FOOTER */
         footer {
             border-top: 1px solid var(--hairline);
-            padding: 32px 28px;
+            padding: 28px 28px;
             display: flex;
-            flex-direction: column;
             align-items: center;
-            gap: 6px;
-            text-align: center;
+            justify-content: space-between;
+            gap: 24px;
         }
 
         .footer-logo {
             height: 28px;
-            margin-bottom: 6px;
             opacity: 0.55;
+            flex-shrink: 0;
+        }
+
+        .footer-right {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            gap: 3px;
+            text-align: right;
         }
 
         footer p {
@@ -458,18 +465,6 @@
             border-color: transparent;
         }
 
-        /* FOOTER */
-        footer {
-            border-top: 1px solid var(--hairline);
-            padding: 18px;
-            font-size: 12.5px;
-            color: var(--muted);
-            text-align: center;
-        }
-
-        footer a { color: inherit; text-decoration: none; }
-        footer a:hover { color: var(--apple-blue); }
-
         @media (max-width: 540px) {
             header { padding: 18px; }
             main { padding: 36px 18px 60px; }
@@ -563,43 +558,6 @@
             </div>
         </div>
 
-        <hr>
-
-        <!-- Form -->
-        <p class="form-label-top">Oder schreib uns direkt</p>
-        <form class="form" action="mailto:info@murrmedien.de" method="get" enctype="text/plain">
-
-            <div class="form-row">
-                <div class="field">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" placeholder="Max Mustermann" required>
-                </div>
-                <div class="field">
-                    <label for="email">E-Mail</label>
-                    <input type="email" id="email" name="email" placeholder="max@beispiel.de" required>
-                </div>
-            </div>
-
-            <div class="field">
-                <label for="thema">Worum geht's?</label>
-                <select id="thema" name="thema">
-                    <option value="">Bitte auswählen …</option>
-                    <option value="website">Website / Webentwicklung</option>
-                    <option value="ci">Corporate Identity</option>
-                    <option value="print">Printmedien</option>
-                    <option value="werbemittel">Werbemittel</option>
-                    <option value="sonstiges">Etwas anderes</option>
-                </select>
-            </div>
-
-            <div class="field">
-                <label for="nachricht">Deine Nachricht</label>
-                <textarea id="nachricht" name="body" placeholder="Erzähl uns kurz von deinem Projekt – oder stell einfach eine Frage. Es gibt keine falsche Antwort hier." required></textarea>
-            </div>
-
-            <button type="submit" class="btn-submit">Nachricht senden →</button>
-        </form>
-
         <!-- Address -->
         <div class="address-block">
             <div>
@@ -618,10 +576,12 @@
 
     <footer>
         <img src="./assets/logo.png" class="footer-logo" alt="Murr Medien">
-        <p>Murr Medien GbR · Amselweg 5 · 71570 Oppenweiler</p>
-        <p><a href="mailto:info@murrmedien.de">info@murrmedien.de</a> · Tel.: +49 155 66152739</p>
-        <p>Gesellschafter: Luca Krämer, Moritz Stoppel</p>
-        <p><a href="./impressum.html">Impressum</a> · <a href="./datenschutz.html">Datenschutz</a></p>
+        <div class="footer-right">
+            <p>Murr Medien GbR · Amselweg 5 · 71570 Oppenweiler</p>
+            <p><a href="mailto:info@murrmedien.de">info@murrmedien.de</a> · Tel.: +49 155 66152739</p>
+            <p>Gesellschafter: Luca Krämer, Moritz Stoppel</p>
+            <p><a href="./impressum.html">Impressum</a> · <a href="./datenschutz.html">Datenschutz</a></p>
+        </div>
     </footer>
 
 </div>
