--- a/projekte.html
+++ b/projekte.html
@@ -167,18 +167,25 @@
         /* FOOTER */
         footer {
             border-top: 1px solid var(--hairline);
-            padding: 32px 28px;
+            padding: 28px 28px;
             display: flex;
-            flex-direction: column;
             align-items: center;
-            gap: 6px;
-            text-align: center;
+            justify-content: space-between;
+            gap: 24px;
         }
 
         .footer-logo {
             height: 28px;
-            margin-bottom: 6px;
             opacity: 0.55;
+            flex-shrink: 0;
+        }
+
+        .footer-right {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            gap: 3px;
+            text-align: right;
         }
 
         footer p {
@@ -437,18 +444,6 @@
             box-shadow: 0 12px 34px rgba(0,113,227,0.35);
         }
 
-        /* FOOTER */
-        footer {
-            border-top: 1px solid var(--hairline);
-            padding: 18px;
-            font-size: 12.5px;
-            color: var(--muted);
-            text-align: center;
-        }
-
-        footer a { color: inherit; text-decoration: none; }
-        footer a:hover { color: var(--apple-blue); }
-
         @media (max-width: 520px) {
             header { padding: 18px; }
             main { padding: 36px 18px 60px; }
@@ -561,10 +556,12 @@
 
     <footer>
         <img src="./assets/logo.png" class="footer-logo" alt="Murr Medien">
-        <p>Murr Medien GbR · Amselweg 5 · 71570 Oppenweiler</p>
-        <p><a href="mailto:info@murrmedien.de">info@murrmedien.de</a> · Tel.: +49 155 66152739</p>
-        <p>Gesellschafter: Luca Krämer, Moritz Stoppel</p>
-        <p><a href="./impressum.html">Impressum</a> · <a href="./datenschutz.html">Datenschutz</a></p>
+        <div class="footer-right">
+            <p>Murr Medien GbR · Amselweg 5 · 71570 Oppenweiler</p>
+            <p><a href="mailto:info@murrmedien.de">info@murrmedien.de</a> · Tel.: +49 155 66152739</p>
+            <p>Gesellschafter: Luca Krämer, Moritz Stoppel</p>
+            <p><a href="./impressum.html">Impressum</a> · <a href="./datenschutz.html">Datenschutz</a></p>
+        </div>
     </footer>
 
 </div>
