--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         .hamburger.open span:nth-child(1) { transform: translateY(7.5px) rotate(45deg); }
         .hamburger.open span:nth-child(2) { opacity: 0; }
         .hamburger.open span:nth-child(3) { transform: translateY(-7.5px) rotate(-45deg); }
+        .hamburger.open { position: fixed; top: 20px; right: 28px; z-index: 400; }
 
         nav {
             display: none;
@@ -153,6 +154,7 @@
             z-index: 200;
             flex-direction: column;
             justify-content: center;
+            align-items: flex-end;
             padding: 0 48px;
             background: color-mix(in srgb, var(--bg) 97%, transparent);
             backdrop-filter: blur(40px);
@@ -171,18 +173,27 @@
 
         nav a {
             display: block;
-            padding: 18px 0;
+            padding: 14px 0;
             font-size: clamp(28px, 6vw, 60px);
             color: var(--text);
             text-decoration: none;
+            text-align: right;
             opacity: 0.45;
-            border-bottom: 1px solid var(--hairline);
             transition: opacity 0.2s;
         }
 
-        nav a:first-child { border-top: 1px solid var(--hairline); }
         nav a:hover { opacity: 1; }
         nav a.active { opacity: 1; color: var(--apple-blue); }
+
+        .nav-social {
+            display: flex;
+            gap: 20px;
+            justify-content: flex-end;
+            margin-top: 36px;
+            opacity: 0.55;
+        }
+        .nav-social .social-link { opacity: 1; }
+        .nav-social .social-link:hover { opacity: 0.75; }
 
         /* MAIN */
         main {
@@ -193,27 +204,6 @@
         }
 
         /* HERO */
-        .hero-avatars {
-            display: flex;
-            margin-bottom: 24px;
-        }
-
-        .hero-avatar {
-            width: 80px;
-            height: 80px;
-            border-radius: 999px;
-            object-fit: cover;
-            border: 2px solid rgba(255, 255, 255, 0.9);
-            outline: 1px solid rgba(0, 0, 0, 0.12);
-            outline-offset: -2px;
-            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
-            background: #fff;
-        }
-
-        .hero-avatar.left {
-            margin-right: -16px;
-            z-index: 2;
-        }
 
         .eyebrow {
             font-size: 12px;
@@ -555,6 +545,22 @@
                     <a href="./ueber-uns.html">Über uns</a>
                     <a href="./projekte.html">Projekte</a>
                     <a href="./kontakt.html">Kontakt</a>
+                    <div class="nav-social">
+                        <a href="https://www.instagram.com/murrmedien" target="_blank" rel="noopener" class="social-link" aria-label="Instagram">
+                            <svg viewBox="0 0 24 24" width="22" height="22" fill="none">
+                                <rect x="3" y="3" width="18" height="18" rx="5" stroke="currentColor" stroke-width="1.7"/>
+                                <circle cx="12" cy="12" r="4" stroke="currentColor" stroke-width="1.7"/>
+                                <circle cx="17.5" cy="6.5" r="1" fill="currentColor"/>
+                            </svg>
+                        </a>
+                        <a href="https://www.linkedin.com/company/murrmedien" target="_blank" rel="noopener" class="social-link" aria-label="LinkedIn">
+                            <svg viewBox="0 0 24 24" width="22" height="22" fill="none">
+                                <rect x="2" y="2" width="20" height="20" rx="4" stroke="currentColor" stroke-width="1.7"/>
+                                <path d="M7 10v7M11 10v7M11 13a3 3 0 0 1 6 0v4" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"/>
+                                <circle cx="7" cy="7" r="1" fill="currentColor"/>
+                            </svg>
+                        </a>
+                    </div>
                 </nav>
             </div>
         </header>
@@ -562,46 +568,16 @@
         <main>
 
             <!-- HERO -->
-            <div class="hero-avatars">
-                <img src="./assets/luca.png" class="hero-avatar left" alt="Luca Krämer">
-                <img src="./assets/moritz.png" class="hero-avatar right" alt="Moritz Stoppel">
-            </div>
-            <p class="eyebrow">Murr Medien</p>
-            <h1>Medien, die<br>Eindruck hinterlassen.</h1>
+            
+            <h1>Medien, die<br>ein Lächeln hinterlassen.</h1>
             <p class="lead">
-                Wir sind Moritz und Luca – ein kleines Team aus der Region mit dem Anspruch,
+                Wir sind Murr Medien– ein kleines Team aus der Region mit dem Anspruch,
                 Medienarbeit zu machen, die wirklich wirkt. Digital wie gedruckt.
             </p>
             <div class="hero-ctas">
-                <a class="cta" href="./kontakt.html">Projekt anfragen</a>
+                <a class="cta-ghost" href="./kontakt.html">Projekt anfragen</a>
                 <a class="cta-ghost" href="./projekte.html">Unsere Projekte</a>
             </div>
-
-            <hr>
-
-            <!-- WAS WIR MACHEN -->
-            <section>
-                <p class="section-label">Was wir machen</p>
-                <div class="leistungen-grid">
-                    <div class="leistung-item">
-                        <div class="l-title">Webentwicklung</div>
-                        <div class="l-desc">Individuelle Websites, die ihr selbst vom Smartphone aus pflegen könnt.</div>
-                    </div>
-                    <div class="leistung-item">
-                        <div class="l-title">Corporate Identity</div>
-                        <div class="l-desc">Logo, Farben, Typografie – ein Auftritt mit Charakter.</div>
-                    </div>
-                    <div class="leistung-item">
-                        <div class="l-title">Printmedien</div>
-                        <div class="l-desc">Visitenkarten, Flyer, Broschüren – mit Sorgfalt gestaltet.</div>
-                    </div>
-                    <div class="leistung-item">
-                        <div class="l-title">Werbemittel</div>
-                        <div class="l-desc">Alles, was euren Auftritt im Alltag sichtbar macht.</div>
-                    </div>
-                </div>
-                <a class="link-more" href="./ueber-uns.html">Mehr über uns →</a>
-            </section>
 
             <hr>
 
@@ -632,6 +608,32 @@
                 </a>
 
                 <a class="link-more" href="./projekte.html">Alle Projekte ansehen →</a>
+            </section>
+
+            <hr>
+
+            <!-- WAS WIR MACHEN -->
+            <section>
+                <p class="section-label">Was wir machen</p>
+                <div class="leistungen-grid">
+                    <div class="leistung-item">
+                        <div class="l-title">Webentwicklung</div>
+                        <div class="l-desc">Individuelle Websites, die ihr selbst vom Smartphone aus pflegen könnt.</div>
+                    </div>
+                    <div class="leistung-item">
+                        <div class="l-title">Corporate Identity</div>
+                        <div class="l-desc">Logo, Farben, Typografie – ein Auftritt mit Charakter.</div>
+                    </div>
+                    <div class="leistung-item">
+                        <div class="l-title">Printmedien</div>
+                        <div class="l-desc">Visitenkarten, Flyer, Broschüren – mit Sorgfalt gestaltet.</div>
+                    </div>
+                    <div class="leistung-item">
+                        <div class="l-title">Werbemittel</div>
+                        <div class="l-desc">Alles, was euren Auftritt im Alltag sichtbar macht.</div>
+                    </div>
+                </div>
+                <a class="link-more" href="./ueber-uns.html">Mehr über uns →</a>
             </section>
 
             <hr>
