--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -134,6 +134,7 @@
         .hamburger.open span:nth-child(1) { transform: translateY(7.5px) rotate(45deg); }
         .hamburger.open span:nth-child(2) { opacity: 0; }
         .hamburger.open span:nth-child(3) { transform: translateY(-7.5px) rotate(-45deg); }
+        .hamburger.open { position: fixed; top: 20px; right: 28px; z-index: 400; }
 
         nav {
             display: none;
@@ -142,6 +143,7 @@
             z-index: 200;
             flex-direction: column;
             justify-content: center;
+            align-items: flex-end;
             padding: 0 48px;
             background: color-mix(in srgb, var(--bg) 97%, transparent);
             backdrop-filter: blur(40px);
@@ -160,18 +162,27 @@
 
         nav a {
             display: block;
-            padding: 18px 0;
+            padding: 14px 0;
             font-size: clamp(28px, 6vw, 60px);
             color: var(--text);
             text-decoration: none;
+            text-align: right;
             opacity: 0.45;
-            border-bottom: 1px solid var(--hairline);
             transition: opacity 0.2s;
         }
 
-        nav a:first-child { border-top: 1px solid var(--hairline); }
         nav a:hover { opacity: 1; }
         nav a.active { opacity: 1; color: var(--apple-blue); }
+
+        .nav-social {
+            display: flex;
+            gap: 20px;
+            justify-content: flex-end;
+            margin-top: 36px;
+            opacity: 0.55;
+        }
+        .nav-social .social-link { opacity: 1; }
+        .nav-social .social-link:hover { opacity: 0.75; }
 
         /* FOOTER */
         footer {
@@ -488,6 +499,22 @@
                 <a href="./ueber-uns.html" class="active">Über uns</a>
                 <a href="./projekte.html">Projekte</a>
                 <a href="./kontakt.html">Kontakt</a>
+                <div class="nav-social">
+                    <a href="https://www.instagram.com/murrmedien" target="_blank" rel="noopener" class="social-link" aria-label="Instagram">
+                        <svg viewBox="0 0 24 24" width="22" height="22" fill="none">
+                            <rect x="3" y="3" width="18" height="18" rx="5" stroke="currentColor" stroke-width="1.7"/>
+                            <circle cx="12" cy="12" r="4" stroke="currentColor" stroke-width="1.7"/>
+                            <circle cx="17.5" cy="6.5" r="1" fill="currentColor"/>
+                        </svg>
+                    </a>
+                    <a href="https://www.linkedin.com/company/murrmedien" target="_blank" rel="noopener" class="social-link" aria-label="LinkedIn">
+                        <svg viewBox="0 0 24 24" width="22" height="22" fill="none">
+                            <rect x="2" y="2" width="20" height="20" rx="4" stroke="currentColor" stroke-width="1.7"/>
+                            <path d="M7 10v7M11 10v7M11 13a3 3 0 0 1 6 0v4" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"/>
+                            <circle cx="7" cy="7" r="1" fill="currentColor"/>
+                        </svg>
+                    </a>
+                </div>
             </nav>
         </div>
     </header>
