letzter commit vor umzug zu vercel

--- a/index.html
+++ b/index.html
@@ -613,8 +613,7 @@
             
             <h1><em style="font-weight:800;font-style:italic;">MEDIEN</em>, die<br>ein Lächeln hinterlassen.</h1>
             <p class="lead">
-                Wir sind Murr Medien– ein kleines Team mit dem Anspruch,
-                Medienarbeit zu machen, die wirklich wirkt. Digital und gedruckt.
+                Hinter Murr Medien steckt ein kleines Team mit einem klaren Anspruch: Medien, die wirklich etwas bewegen – ob digital oder gedruckt.
             </p>
             <div class="hero-ctas">
                 <a class="cta-ghost" href="./kontakt.html">Projekt anfragen</a>
@@ -660,7 +659,7 @@
                     <div class="hero-title">Vereinsgaststätte Rohrbachtal</div>
                     <div class="hero-desc">
                         Für die Vereinsgaststätte Rohrbachtal haben wir eine moderne Website entwickelt. 
-                        Besonderes Augenmerk lag auf der in das CMS integrierten Speisekarte, die es ermöglicht, Änderungen schnell und unkompliziert – auch mobil über das Smartphone – vorzunehmen.
+                        Besonderes Augenmerk lag auf der in das CMS integrierten Speisekarte, die es ermöglicht, Änderungen schnell und unkompliziert – auch mobil über das Smartphone vorzunehmen.
                     </div>
                 </div>
                 <div class="hero-link">
