--- a/projekte.html
+++ b/projekte.html
@@ -625,7 +625,7 @@
                     <div class="hero-title">Vereinsgaststätte Rohrbachtal</div>
                     <div class="hero-desc">
                         Für die Vereinsgaststätte Rohrbachtal haben wir eine moderne Website entwickelt. 
-                        Besonderes Augenmerk lag auf der in das CMS integrierten Speisekarte, die es ermöglicht, Änderungen schnell und unkompliziert – auch mobil über das Smartphone – vorzunehmen.
+                        Besonderes Augenmerk lag auf der in das CMS integrierten Speisekarte, die es ermöglicht, Änderungen schnell und unkompliziert – auch mobil über das Smartphone vorzunehmen.
                     </div>
                 </div>
                 <div class="hero-link">
